--- a/pages/SA-case-overview.html
+++ b/pages/SA-case-overview.html
@@ -37,15 +37,13 @@
         </header>
     </div>
       
-    <div class="d-flex bg-gold justify-content-end px-4">
-        <div>
-            <nav class ="navbar">
-            <a class = "link-dotted link-light" href="./pages/login.html">Register</a> 
-            <a class = "text-light text-decoration-none px-1">/</a>
-            <a class = "link-dotted link-light" href="./pages/login.html">Log-in</a>
-            </nav>
-        </div>
-    </div>
+    <div class="d-flex bg-gold justify-content-end px-4 pt-3">
+      <div>
+          <nav class ="navbar">
+          <p class="text-light"><u>Welcome, <span id="nameHere">!</u></span></p>
+          </nav>
+      </div>
+  </div>
 
     <!--Body-->
 
