--- a/pages/applicant-start.html
+++ b/pages/applicant-start.html
@@ -38,12 +38,10 @@
         </header>
     </div>
       
-    <div class="d-flex bg-gold justify-content-end px-4">
+    <div class="d-flex bg-gold justify-content-end px-4 pt-3">
         <div>
             <nav class ="navbar">
-            <a class = "link-dotted link-light" href="./pages/login.html">Register</a> 
-            <a class = "text-light text-decoration-none px-1">/</a>
-            <a class = "link-dotted link-light" href="./pages/login.html">Log-in</a>
+            <p class="text-light"><u>Welcome, <span id="nameHere">!</u></span></p>
             </nav>
         </div>
     </div>
@@ -99,6 +97,8 @@
             alert("No case exists!");
         }
         function checkExistingCase(){
+            var name = sessionStorage.getItem("name");
+            document.getElementById("nameHere").innerHTML = name;
             var userID = sessionStorage.getItem("userID");
             console.log(sessionStorage)
             var settings = {
