--- a/pages/otp.html
+++ b/pages/otp.html
@@ -57,7 +57,7 @@
             </div>
 
             <div class="w-100 bg-beige d-flex flex-column p-3">
-                <div class="justify-content-center d-flex"><p>You should have received an email from <b>the_penteract@gmail.com</b></p></div>
+                <div class="justify-content-center d-flex"><p>You should have received an email from <b>locate_advocate@gmail.com</b></p></div>
                 <div class="justify-content-center d-flex"><p>Enter the 6 Digit Verification Code within the next 10 minutes to complete your log-in process.</p></div>
                 <div class="justify-content-center d-flex">
                     <form id="otpLogin">
