--- a/pages/pbc-start.html
+++ b/pages/pbc-start.html
@@ -41,9 +41,7 @@
     <div class="d-flex bg-gold justify-content-end px-4">
         <div>
             <nav class ="navbar">
-            <a class = "link-dotted link-light" href="./pages/login.html">Register</a> 
-            <a class = "text-light text-decoration-none px-1">/</a>
-            <a class = "link-dotted link-light" href="./pages/login.html">Log-in</a>
+            <p class="text-light">Welcome <a class = "link-dotted link-light" href="#">SMU PRO BONO CENTRE</a> </p>
             </nav>
         </div>
     </div>
@@ -90,6 +88,12 @@
         </a>
 
     </div>
+
+    <script>
+        window.onload = function{
+            sessionStorage.setItem("name", "PRO BONO CENTER")
+        }
+    </script>
 
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="animations.js"></script>
