--- a/pages/SA-dashboard.html
+++ b/pages/SA-dashboard.html
@@ -38,10 +38,10 @@
         </header>
     </div>
       
-    <div class="d-flex bg-gold justify-content-end px-4">
+    <div class="d-flex bg-gold justify-content-end px-4 pt-3">
         <div>
             <nav class ="navbar">
-            <p class="text-light">Welcome <a class = "link-dotted link-light" href="#">John Tan</a> </p>
+            <p class="text-light"><u>Welcome, <span id="nameHere">!</u></span></p>
             </nav>
         </div>
     </div>
