--- a/pages/pbc-case-overview.html
+++ b/pages/pbc-case-overview.html
@@ -38,14 +38,12 @@
     </div>
       
     <div class="d-flex bg-gold justify-content-end px-4">
-        <div>
-            <nav class ="navbar">
-            <a class = "link-dotted link-light" href="./pages/login.html">Register</a> 
-            <a class = "text-light text-decoration-none px-1">/</a>
-            <a class = "link-dotted link-light" href="./pages/login.html">Log-in</a>
-            </nav>
-        </div>
-    </div>
+      <div>
+          <nav class ="navbar">
+          <p class="text-light">Welcome <a class = "link-dotted link-light" href="#">SMU PRO BONO CENTRE</a> </p>
+          </nav>
+      </div>
+  </div>
 
     <!--Body-->
 
@@ -253,8 +251,8 @@
             document.getElementById("caseDescription").innerHTML = response.data.client_case_description;
             document.getElementById("caseName").innerHTML = response.data.case_title;
             document.getElementById("clientName").innerHTML = response.data.client_name;
-            document.getElementById("lawyerName").innerHTML = response.data.lawyer_id;
-            document.getElementById("saName").innerHTML = response.data.sa_id;
+            document.getElementById("lawyerName").innerHTML = response.data.lawyer_name;
+            document.getElementById("saName").innerHTML = response.data.sa_name;
             window.sessionStorage
             sessionStorage.setItem("userID", response.data.client_id);
           }
