--- a/pages/pbc-start.html
+++ b/pages/pbc-start.html
@@ -64,7 +64,7 @@
 
     <div class="container px-0 pb-2 pt-0 d-flex justify-content-between animate__animated animate__fadeIn " style="margin-top: 5vh; width: 80vw;">
 
-        <a href="./clinic-select.html" class="block-link link-dark">
+        <a href="view-all-SA.html" class="block-link link-dark">
             <div class="bg-beige rounded-corners grow p-0 justify-content-center d-flex align-items-center flex-column" style="height: 40vh;">
                 <div class="d-flex justify-content-center">
                     <img src="../pictures/student.png" style="max-width: 8rem; height:auto; margin-bottom: 30px; margin-left: 30px;">
@@ -76,13 +76,13 @@
         </a>
         <div style="width: 20vh;"></div>
 
-        <a href="applicant-case-overview.html" class="block-link link-dark">
+        <a href="view-all-lawyers.html" class="block-link link-dark">
             <div class="bg-beige rounded-corners grow p-0 d-flex justify-content-center align-items-center flex-column" style="height: 40vh;">
                 <div class="d-flex justify-content-center">
-                    <img src="../pictures/chat.png" style="max-width: 8rem; height:auto; margin-bottom: 10px;">
+                    <img src="../pictures/lawyer.png" style="max-width: 8rem; height:auto; margin-bottom: 10px;">
                 </div>
                 <div class="d-flex justify-content-center">
-                    <p>Case Updates</p>
+                    <p>View Lawyer Profiles</p>
                 </div>
             </div>
         </a>
