--- a/pages/lawyer-case-overview.html
+++ b/pages/lawyer-case-overview.html
@@ -70,13 +70,6 @@
                 </div>
             </a>
         </div>
-        <div class="col-6">
-            <a href="chat.html" class="block-link link-dark">
-                <div class="d-flex justify-content-center m-5">  
-                  <div><img src="../pictures/chat-gold.png" style="width: 2vw; height: auto;"> <span><b><u>Chat with Lawyer</u></b></span></div>
-                </div>
-              </a>
-        </div>
 
       </div>
 
@@ -204,13 +197,13 @@
 
                 
 
-                <div class="bg-dblue"><p class="text-light">Documents Uploaded</p></div>
+                <!-- <div class="bg-dblue"><p class="text-light">Documents Uploaded</p></div>
 
                 <ul id="documentList">
                     <li><a href="#">Document 1</a></li>
                     <li><a href="#">Document 2</a></li>
                     <li><a href="#">Document 3</a></li>
-                </ul>
+                </ul> -->
 
                 <div class="bg-dblue"><p class="text-light">Brief Description</p></div>
 
