--- a/pages/applicant-case-overview.html
+++ b/pages/applicant-case-overview.html
@@ -67,7 +67,7 @@
 
       <a href="chat.html" class="block-link link-dark">
         <div class="d-flex justify-content-center m-5">  
-          <div id="chatHere"><img src="../pictures/chat-gold.png" style="width: 2vw; height: auto;"> <span><b><u>Chat with Student Assistant</u></b></span></div>
+          <div id="chatHere"><img src="../pictures/chat-gold.png" style="width: 2vw; height: auto;"> <span onclick="clientSA()"><b><u>Chat with Student Assistant</u></b></span></div>
         </div>
       </a>
 
@@ -156,7 +156,7 @@
 
             <li class="timeline-item mb-5">
 
-              <span class="timeline-icon">
+              <span id="confirmedAppointment" class="timeline-icon">
                 <i class="fas fa-money-bill-wave text-primary fa-sm fa-fw"></i>
               </span>
               <h5 class="fw-bold">Appointment Confirmed</h5>
@@ -236,6 +236,9 @@
         });
       }
 
+      function saClient(){
+        sessionStorage.setItem("category", "client-sa")
+      }
     </script>
 
   </body>
