--- a/pages/chat.html
+++ b/pages/chat.html
@@ -45,7 +45,7 @@
     <div class="d-flex bg-gold justify-content-end px-4 pt-3">
       <div>
           <nav class ="navbar">
-          <p class="text-light"><u>Welcome, <span id="nameHere">!</u></span></p>
+          <p class="text-light"><u>Welcome!</u></span></p>
           </nav>
       </div>
     </div>
@@ -57,7 +57,7 @@
         <div class=" center">
           <div>
             <div class="w-full">
-              <h3 style="text-align:center;"><b><i>You have been connected with a Student Assistant, either of you can initiate the conversation when needed!</i></b></h3>
+              <h3 style="text-align:center;"><b><i>This is a chat between a <span id="chatPartner"></span>, either of you can initiate the conversation when needed!</i></b></h3>
               <div class="relative w-full p-6 ">
   
                 <ul class="space-y-2" id="chat-messages">
@@ -114,8 +114,19 @@
       const category = sessionStorage.getItem("category");
       const case_id = sessionStorage.getItem("caseID");
 
+      console.log(sessionStorage);
+
       window.onload = loadmsg();
       function loadmsg() {
+        
+
+        if(sessionStorage.getItem("category") =="sa-client"){
+          document.getElementById("chatPartner").innerHTML = "student assistant and a client"
+        }
+        else if(sessionStorage.getItem("category") =="sa-lawyer"){
+          document.getElementById("chatPartner").innerHTML = "student assistant and a lawyer"
+        }
+
         const xhttp = new XMLHttpRequest();
         xhttp.onload = function() {
           let msg_arr = JSON.parse(this.responseText).data;
