--- a/pages/submit_summary.html
+++ b/pages/submit_summary.html
@@ -223,7 +223,7 @@
             xhttp.onload = function() {
                 let draft_submitted = JSON.stringify({"case_id": case_id, "summary_of_facts":summary_of_facts_input, "issues_questions": issues_questions_input, "applicable_law": applicable_law_input, "court_hearing_matter": court_hearing_matter_input, "specific_questions": specific_questions_input});
             }
-            xhttp.open("POST", "http://localhost:8100/create_case_summary", true);
+            xhttp.open("POST", "http://52.220.49.254:8100/create_case_summary", true);
             xhttp.setRequestHeader("Content-Type", "application/json");
             xhttp.send(draft_submitted);
             // console.log("success");
@@ -284,7 +284,7 @@
             
 
           }
-          xhttp.open("POST", "http://localhost:8100/get_case_summary", true);
+          xhttp.open("POST", "http://52.220.49.254:8100/get_case_summary", true);
           xhttp.setRequestHeader("Content-Type", "application/json");
           xhttp.send(post_json);
         }
