--- a/pages/view-all-lawyers.html
+++ b/pages/view-all-lawyers.html
@@ -113,7 +113,7 @@
           }
 
         }
-        xhttp.open("GET", "http://localhost:8100/all_lawyer_keywords", true);
+        xhttp.open("GET", "http://52.220.49.254:8100/all_lawyer_keywords", true);
         xhttp.setRequestHeader("Content-Type", "application/json");
         xhttp.send();
       }
